chore: migrate package manager from npm to pnpm

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "next": "16.1.6",
@@ -27,5 +28,10 @@
     "typescript": "^5",
     "vite-tsconfig-paths": "^6.1.1",
     "vitest": "^4.0.18"
-  }
+  },
+  "engines": {
+  "npm": "please-use-pnpm",
+  "pnpm": ">=10.30.3"
+  },
+  "packageManager": "pnpm@10.30.3"
 }
